# InTheNameOfScience

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
assets/: arrow-blue2.aseprite  arrow-red2.aseprite
libs/common/: CMakeLists.txt
libs/common/include/: array_list.h  bool_mat.h  common_types.h  common_utils.h  linked_list.h  tmem.h  utils.h
libs/common/src/: array_list.c  bool_mat.c  common_utils.c  linked_list.c  tmem.c  utils.c
libs/common/tests/: array_list_tests.c  boolmat_tests.c  common_tests.h  main.c  tmem_tests.c
libs/prayengine/: CMakeLists.txt
libs/prayengine/include/: pray_camera.h  pray_component.h  pray_components.h  pray_engine.h  pray_entity.h  pray_entity_registry.h  pray_globals.h  pray_system.h  pray_utils.h
libs/prayengine/src/: pray_camera.c  pray_component.c  pray_components.c  pray_engine.c  pray_entity.c  pray_entity_registry.c  pray_system.c  pray_utils.c
libs/prayengine/tests/: entity_tests.c  test_components.c  test_components.h
libs/raylib/: CMakeLists.txt
raylib/: CMakeLists.txt
src/: astar.c  astar.h  astarmain.c  bool_mat.c  bool_mat.h  camera_system.h  components.c  components.h  entity.h  entity_registry.c  linked_list.c  linked_list.h  main.c  object_registry.c  object_registry.h  pathfinding_system.c  pathfinding_system.h  playground.c  sim.h  system.c  system.h  utils.c  utils.h
src/components/: health_component.c  health_component.h  itnos_components.c  itnos_components.h  pathfind_component.c  pathfind_component.h  projectile_component.c  projectile_component.h  turret_component.c  turret_component.h  world_component.c  world_component.h
src/pray_engine/: components.c  components.h  entity.c  entity_registry.h  pray_colors.h  pray_engine.c  pray_engine.h  pray_globals.h  system.h
src/systems/: camera_system.c  camera_system.h  init_system.c  init_system.h  path_system.c  path_system.h  pathfinding_system.c  pathfinding_system.h  projectile_system.c  projectile_system.h  selection_system.c  selection_system.h  sprite2d_system.c  sprite2d_system.h  targeting_system.c  targeting_system.h  turret_system.c  turret_system.h  unit_system.c  unit_system.h  world_system.c  world_system.h
src/utils/: astar.c  game_math.c  game_math.h
